plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.oneclick'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_22
	targetCompatibility = JavaVersion.VERSION_22
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.flywaydb:flyway-core:8.5.10'
	runtimeOnly 'io.r2dbc:r2dbc-postgresql:0.8.8.RELEASE'
	runtimeOnly 'org.postgresql:postgresql:42.7.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	implementation 'org.modelmapper:modelmapper:2.4.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'
	testImplementation 'org.testcontainers:postgresql:1.17.3'
	//kafka
	// Spring Kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// Kafka Client
	implementation 'org.apache.kafka:kafka-clients'

	// Reactor Kafka para la integración reactiva (opcional, si necesitas trabajar con Kafka de forma completamente reactiva)
	implementation 'io.projectreactor.kafka:reactor-kafka'

	// Testcontainers para JUnit 5
	testImplementation 'org.testcontainers:testcontainers:1.17.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.17.3'
	testImplementation 'org.testcontainers:postgresql:1.17.3'

}


tasks.named('test') {
	useJUnitPlatform()
}
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += "--enable-preview"
}
tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}